# text2sparql.aksw.org

./: CHALLENGERS.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: .pages  agenda.md  challenge.md  guidelines.md  index.md  openapi.json  organizing-committee.md  program.md
docs/assets/: extra.css
docs/benchmark/: ck25_true_result_set.json  db25_true_result_set.json  questions_ck25.yaml  questions_db25.yaml
docs/results/: index.md
docs/results/AIFB/: ck25_answers.json  ck25_eval.json  ck25_responses.db  db25_answers.json  db25_eval.json  db25_responses.db  db25_system_result_set.json
docs/results/DBPEDIA-CG/: ck25_responses.db  db25_answers.json  db25_eval.json  db25_responses.db  db25_system_result_set.json
docs/results/DBPEDIA-CL/: ck25_responses.db  db25_answers.json  db25_eval.json  db25_responses.db  db25_system_result_set.json
docs/results/DBPEDIA-SC/: ck25_responses.db  db25_answers.json  db25_eval.json  db25_responses.db  db25_system_result_set.json
docs/results/FRANZ/: ck25_answers.json  ck25_eval.json  ck25_responses.db  ck25_system_result_set.json  db25_answers.json  db25_eval.json  db25_responses.db  db25_system_result_set.json
docs/results/IIS-L/: ck25_answers.json  ck25_eval.json  ck25_responses.db  db25_answers.json  db25_eval.json  db25_responses.db
docs/results/IIS-Q/: ck25_eval.json  ck25_responses.db  db25_answers.json  db25_eval.json  db25_responses.db  db25_sytem_result_set.json
docs/results/INFAI/: ck25_eval.json  ck25_responses.db  ck25_system_result_set.json  db25_answers.json  (+3 more)
(+29 files in other folders)
