[tool.poetry]
name = "text2sparql.aksw.org "
version = "0.0.0"
description = "Webpage of the First International TEXT2SPARQL Challenge"
authors = ["Sebastian Tramp <sebastian.tramp@eccenca.com>"]
homepage = "https://github.com/aksw/text2sparql.aksw.org"
readme = "README.md"
classifiers = [
    "Private :: Do Not Upload",
]
packages = [{include = "tools"}]


[tool.poetry.dependencies]
python = "^3.11"
Pillow = "^11.0.0"
CairoSVG = "^2.7.1"
mkdocs = "^1.6.1"
mkdocs-git-revision-date-localized-plugin = "^1.3.0"
mkdocs-awesome-pages-plugin = "^2.9.3"
mkdocs-glightbox = "^0.4.0"
mkdocs-macros-plugin = "^1.3.7"
mkdocs-autolinks-plugin = "^0.7.1"
mkdocs-redirects = "^1.2.2"
mkdocs-swagger-ui-tag = "^0.6.11"
mkdocs-material = "9.5.49"
pymdown-extensions = "^10.12"

[tool.poetry.group.dev.dependencies]
linkcheckmd = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

